--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Student CGPA and Information</h1>
+    <h1>DIU SWE Batch 35 Result</h1>
     <table id="student-table">
         <thead>
             <tr>
