updating preview preloader

--- a/preview.html
+++ b/preview.html
@@ -99,11 +99,7 @@
     </div>
     <main>
         <div id="student-info">
-            <h1>Result of $Studentname</h1>
-            <h2>$programName, Daffodil International University</h2>
-            <h3>Department of departmentName ($deptShortName), $facultyName ($facShortName)</h3>
-            <h4>ID: $studentID</h4>
-            <b>Admission info: </b> $Semester, Batch $batchNo, Admitted to campus: $campusName
+            Loading
         </div>
 
         <div id="cgpa-display"></div>
