Bold effect removed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         #student-table tbody tr:hover {
             background-color: #effbff; /* Highlight row on hover */
             color: #2374ff;
-            font-weight: bold;
+            /* font-weight: bold; */
         }
     </style>
 </head>
